--- a/index.html
+++ b/index.html
@@ -1,35 +1,18 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>My first Three.js app</title>
-        <style>canvas { width: 100%; height: 100% }</style>
-    </head>
-    <body>
-        <title>AGe.car</title>
+        <title>Overdrive</title>
+        
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-        <script data-main="app.js" src="libs/require/require.js"></script>
-        <div id='info'></div>
-        <style type="text/css">
-        #info {
-            position: fixed;
-            top: 50px;
-            left: 50px;
-            font-family: monospace;
-            font-size: 12px;
-            text-shadow: 0px 0px 2px #00f, 0px 0px 3px #00f, 0px 0px 5px #000, 0px 0px 5px #000, 0px 0px 5px #000;
-            color: #fff;
-        }
-        .red {
-            text-shadow: 0px 0px 2px #f00, 0px 0px 3px #f00, 0px 0px 5px #000, 0px 0px 5px #000, 0px 0px 5px #000 !important;
-        }
+        
+        <link rel="stylesheet" type="text/css" href="style/main.css" />
 
-        .green {
-            text-shadow: 0px 0px 2px #0f0, 0px 0px 3px #0f0, 0px 0px 5px #000, 0px 0px 5px #000, 0px 0px 5px #000 !important;
-        }
-        .blue {
-            text-shadow: 0px 0px 2px #09f, 0px 0px 3px #09f, 0px 0px 5px #000, 0px 0px 5px #000, 0px 0px 5px #000 !important;
-        }
-        </style>
+        <script data-main="enter.js" src="libs/require/require.js"></script>
+    </head>
+    <body>
+
+        <div id='info'></div>
+
     </body>
 </html>
