--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     </head>
     <body>
 
-        <div id='info'></div>
+        <div id="canvas-box"></div>
+        <div id='info'>
+            Speed: <b id="speed">0</b> kmph
+            <br/>
+            RPM: <b id="rpm">1000</b>
+            <br/>
+            CurrentGear: <b id="gear">0</b>
+        </div>
 
     </body>
 </html>
