--- a/index.html
+++ b/index.html
@@ -21,5 +21,16 @@
             CurrentGear: <b id="gear">0</b>
         </div>
 
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-42440267-1', 'poly-js.com');
+            ga('send', 'pageview');
+
+        </script>
+
     </body>
 </html>
