--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>Overdrive</title>
+
+        <link rel="icon" type="image/png" href="data/textures/checkerboard.jpg" />
+        <link class="hide" rel="image_src" href="data/textures/checkerboard.jpg" />
         
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
